--- a/10-lecture-homework/scss/_questions.scss
+++ b/10-lecture-homework/scss/_questions.scss
@@ -2,9 +2,15 @@
     font-family: $titles-font;
     color: $gray1;
     display: flex;
-    flex-direction: column;
-    gap: 68px;
+    justify-content: center;
     padding: 0 120px;
+
+    .questions__container {
+        flex-basis: 1440px;
+        display: flex;
+        flex-direction: column;
+        gap: 68px;
+    }
 
     .questions__title {
         margin: 0;
