--- a/10-lecture-homework/scss/_steps.scss
+++ b/10-lecture-homework/scss/_steps.scss
@@ -2,9 +2,12 @@
     padding: 0 120px;
     font-family: $titles-font;
     color: $gray1;
+    display: flex;
+    justify-content: center;
 }
 
 .steps__container {
+    flex-basis: 1440px;
     display: flex;
     flex-direction: column;
 }
